# tink-tinkey

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  release_tinkey.sh  tinkey.rb
kokoro/: create_github_release_branch.sh  create_github_release_tag.sh  release_artifact.sh
kokoro/gcp_ubuntu/bazel/: run_tests.sh
kokoro/gcp_ubuntu/release/: run_tests.sh
kokoro/macos_external/bazel/: run_tests.sh
src/main/java/com/google/crypto/tink/tinkey/: BUILD.bazel  KeyIdHandler.java  ListKeysetCommand.java  Tinkey.java  TinkeyKeyTemplates.java  TinkeyTestKmsClient.java
src/test/java/com/google/crypto/tink/tinkey/: AddKeyCommandTest.java  BUILD.bazel  ConvertKeysetCommandTest.java  CreateKeysetCommandTest.java  CreatePublicKeysetCommandTest.java  RotateKeysetCommandTest.java  TinkeyTestKmsClientTest.java
