"""Tink Tinkey module."""

module(
    name = "tink_tinkey",
    version = "1.13.0",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "args4j:args4j:2.33",
        "com.google.auto.service:auto-service-annotations:1.1.1",
        "com.google.auto.service:auto-service:1.1.1",
        "com.google.auto:auto-common:1.2.2",
        "com.google.crypto.tink:tink-awskms:2.0.0",
        "com.google.crypto.tink:tink-gcpkms:1.11.0",
        "com.google.crypto.tink:tink:1.22.0",
        "com.google.truth:truth:1.4.5",
        "junit:junit:4.13.2",
    ],
    known_contributing_modules = ["protobuf"],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
