licenses(["notice"])

java_test(
    name = "CreatePublicKeysetCommandTest",
    size = "small",
    srcs = ["CreatePublicKeysetCommandTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/tinkey",
        "//src/main/java/com/google/crypto/tink/tinkey:kms_clients_factory",
        "//src/main/java/com/google/crypto/tink/tinkey:tinkey_test_kms_client",
        "//src/main/java/com/google/crypto/tink/tinkey:tinkey_util",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "CreateKeysetCommandTest",
    size = "small",
    srcs = ["CreateKeysetCommandTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/tinkey",
        "//src/main/java/com/google/crypto/tink/tinkey:kms_clients_factory",
        "//src/main/java/com/google/crypto/tink/tinkey:tinkey_test_kms_client",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "AddKeyCommandTest",
    size = "small",
    srcs = ["AddKeyCommandTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/tinkey",
        "//src/main/java/com/google/crypto/tink/tinkey:kms_clients_factory",
        "//src/main/java/com/google/crypto/tink/tinkey:tinkey_test_kms_client",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "RotateKeysetCommandTest",
    size = "small",
    srcs = ["RotateKeysetCommandTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/tinkey",
        "//src/main/java/com/google/crypto/tink/tinkey:kms_clients_factory",
        "//src/main/java/com/google/crypto/tink/tinkey:tinkey_test_kms_client",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "ConvertKeysetCommandTest",
    size = "small",
    srcs = ["ConvertKeysetCommandTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/tinkey",
        "//src/main/java/com/google/crypto/tink/tinkey:kms_clients_factory",
        "//src/main/java/com/google/crypto/tink/tinkey:tinkey_test_kms_client",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "TinkeyTestKmsClientTest",
    size = "small",
    srcs = ["TinkeyTestKmsClientTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/tinkey:kms_clients_factory",
        "//src/main/java/com/google/crypto/tink/tinkey:tinkey_test_kms_client",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "KmsClientsFactoryTest",
    size = "small",
    srcs = ["KmsClientsFactoryTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/tinkey:kms_clients_factory",
        "//src/main/java/com/google/crypto/tink/tinkey:tinkey_test_kms_client",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
